# NerdBot

./: .gitignore  Procfile  main.py  pyproject.toml  requirements.txt
cogs/: anime.py  game.py  initial.py  meme.py  moderation.py  nofap.py  reddit.py  ronb.py  tiktok.py
constants/: reddit.py
decorators/: restrict_to_channel.py
utils/: is_url.py
wrappers/: anime_wrapper.py  nofap_wrapper.py  reddit_wrapper.py  ronb_wrapper.py  tiktok_wrapper.py
